--- a/index.html
+++ b/index.html
@@ -6,123 +6,114 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Zeyad Alaa Fatouh Mohamed - CV</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 20px;
-            padding: 20px;
-        }
-
-        h1,
-        h2,
-        h3 {
-            color: #333;
-        }
-
-        .contact {
-            margin-bottom: 20px;
-        }
-
-        .contact a {
-            color: #0066cc;
-            text-decoration: none;
-        }
-
-        .contact a:hover {
-            text-decoration: underline;
-        }
-
-        ul {
-            list-style: none;
-            padding: 0;
-        }
-
-        ul li {
-            margin-bottom: 10px;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+    <header>
+        <div class="container">
+            <h1>Zeyad Alaa Fatouh Mohamed</h1>
+            <p>New El-Maadi, Cairo, Egypt | +201027124806 | <a
+                    href="mailto:zeyad.ellkber@gmail.com">zeyad.ellkber@gmail.com</a></p>
+            <p>
+                <a href="https://www.linkedin.com/in/zeyad-alaa/" target="_blank">LinkedIn</a> |
+                <a href="https://github.com/Zeyad222" target="_blank">GitHub</a> |
+                <a href="https://www.behance.net/zeyadalaa" target="_blank">Behance</a>
+            </p>
+        </div>
+    </header>
 
-    <h1>Zeyad Alaa Fatouh Mohamed</h1>
-    <p>New El-Maadi, Cairo, Egypt | +201027124806 | <a href="mailto:zeyad.ellkber@gmail.com">zeyad.ellkber@gmail.com</a>
-    </p>
-    <p><a href="https://www.linkedin.com/in/zeyad-alaa/">LinkedIn</a> | <a href="https://github.com/Zeyad222">GitHub</a>
-        | <a href="https://www.behance.net/zeyadalaa">Behance</a></p>
+    <nav>
+        <ul class="container">
+            <li><a href="#objective">Objective</a></li>
+            <li><a href="#education">Education</a></li>
+            <li><a href="#project">Graduation Project</a></li>
+            <li><a href="#experience">Experience</a></li>
+            <li><a href="#internship">Internship</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#activities">Extracurricular Activities</a></li>
+            <li><a href="#languages">Languages</a></li>
+        </ul>
+    </nav>
 
-    <h2>Objective</h2>
-    <p>Continuous development makes me able to complete the required tasks accurately and reach the best results in the
-        shortest possible time while maintaining accuracy and perfection.</p>
+    <main class="container">
+        <section id="objective">
+            <h2>Objective</h2>
+            <p>Continuous development makes me able to complete the required tasks accurately and reach the best results
+                in the shortest possible time while maintaining accuracy and perfection.</p>
+        </section>
 
-    <h2>Education</h2>
-    <ul>
-        <li>Cairo University, Faculty of Computer Science and Artificial Intelligence, Major: Artificial Intelligence
-            (2019 - 2023)</li>
-        <li>Taha Hamam Language School (2019)</li>
-    </ul>
-
-    <h2>Graduation Project</h2>
-    <p><strong>"Egypt Eye"</strong> (Aug 2022 – July 2023)</p>
-    <ul>
-        <li>Developed an application providing comprehensive information on Egyptian landmarks, facilitating
-            personalized city tours with a focus on simplicity and accessibility.</li>
-        <li>Features an advanced image-based retrieval system that allows users to instantly identify and learn about
-            Egyptian landmarks by simply uploading a photo.</li>
-        <li>Enabled retrieval techniques, specifically content-based retrieval, to search and retrieve images based on
-            their visual content.</li>
-        <li>Designed a custom CNN VGG19 model for high accuracy and reliability in identifying landmarks.</li>
-    </ul>
-
-    <h2>Experience</h2>
-    <ul>
-        <li><strong>Freelancer Designer</strong> (2021 – Current)
+        <section id="education">
+            <h2>Education</h2>
             <ul>
-                <li>Creating social media designs and motion graphics for advertising on various platforms.</li>
-                <li>Contributed to small embedded systems projects by designing graphical interfaces and animations.
-                </li>
+                <li><strong>Cairo University</strong>, Faculty of Computer Science and Artificial Intelligence (2019 -
+                    2023) - Major: Artificial Intelligence</li>
+                <li><strong>Taha Hamam Language School</strong> (2019)</li>
             </ul>
-        </li>
-        <li><strong>Data Analyst (Nine Psychology)</strong> (Dec 2022 – May 2023)
+        </section>
+
+        <section id="project">
+            <h2>Graduation Project</h2>
+            <p><strong>"Egypt Eye"</strong> (Aug 2022 – July 2023)</p>
             <ul>
-                <li>Collaborated closely with a supervisor to analyze and visualize client data.</li>
-                <li>Utilized tools such as Excel and Trello to manage client information and provide insights.</li>
+                <li>Developed an application providing comprehensive information on Egyptian landmarks, facilitating
+                    personalized city tours with a focus on simplicity and accessibility.</li>
+                <li>Advanced image-based retrieval system for identifying and learning about Egyptian landmarks from
+                    uploaded photos.</li>
+                <li>Implemented content-based retrieval techniques for image search.</li>
+                <li>Designed a custom CNN VGG19 model for high accuracy.</li>
             </ul>
-        </li>
-        <li><strong>Motion Graphic Designer (Mood Company)</strong> (2020 – 2021)</li>
-        <li><strong>Junior Designer (Acheiva Academy)</strong> (2019 – 2021)</li>
-    </ul>
+        </section>
 
-    <h2>Internship</h2>
-    <ul>
-        <li><strong>Data Analyst</strong> at Technocolabs Software Company (Remotely) (Sep 2022 – Nov 2022)
+        <section id="experience">
+            <h2>Experience</h2>
             <ul>
-                <li>Enhanced skills in statistical analysis, data visualization, and data manipulation.</li>
-                <li>Refined communication and time management skills through remote work.</li>
+                <li><strong>Freelancer Designer</strong> (2021 – Current)</li>
+                <li><strong>Data Analyst at Nine Psychology</strong> (Dec 2022 – May 2023)</li>
+                <li><strong>Motion Graphic Designer at Mood Company</strong> (2020 – 2021)</li>
+                <li><strong>Junior Designer at Acheiva Academy</strong> (2019 – 2021)</li>
             </ul>
-        </li>
-    </ul>
+        </section>
 
-    <h2>Skills</h2>
-    <ul>
-        <li>Software Testing Fundamentals ISTQB</li>
-        <li>OOP, Algorithms, Data Structure</li>
-        <li>Python, SQL, HTML, CSS, Java, C++, C#, .NET</li>
-        <li>RDBMS Management: MySQL, SQL Server</li>
-    </ul>
+        <section id="internship">
+            <h2>Internship</h2>
+            <ul>
+                <li><strong>Data Analyst at Technocolabs Software Company</strong> (Remote) (Sep 2022 – Nov 2022)</li>
+            </ul>
+        </section>
 
-    <h2>Extracurricular Activities</h2>
-    <ul>
-        <li>Volunteering in Karma El khair Association (2024 – Current)</li>
-        <li>Microsoft Camp (2014)</li>
-    </ul>
+        <section id="skills">
+            <h2>Skills</h2>
+            <ul>
+                <li>Software Testing Fundamentals ISTQB</li>
+                <li>OOP, Algorithms, Data Structure</li>
+                <li>Python, SQL, HTML, CSS, Java, C++, C#, .NET</li>
+                <li>Data Analysis</li>
+                <li>RDBMS Management: MySQL, SQL Server</li>
+            </ul>
+        </section>
 
-    <h2>Languages</h2>
-    <ul>
-        <li>Arabic (Mother Tongue), English (B1), German (A2)</li>
-    </ul>
+        <section id="activities">
+            <h2>Extracurricular Activities</h2>
+            <ul>
+                <li>Volunteering in Karma El khair Association (2024 – Current)</li>
+                <li>Microsoft Camp (2014)</li>
+            </ul>
+        </section>
 
+        <section id="languages">
+            <h2>Languages</h2>
+            <ul>
+                <li>Arabic (Mother Tongue), English (B1), German (A2)</li>
+            </ul>
+        </section>
+    </main>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 Zeyad Alaa Fatouh Mohamed. All rights reserved.</p>
+        </div>
+    </footer>
 </body>
 
 </html>
