add profile pic, change styles

--- a/index.html
+++ b/index.html
@@ -12,14 +12,19 @@
 <body>
     <header>
         <div class="container">
-            <h1>Zeyad Alaa Fatouh Mohamed</h1>
-            <p>New El-Maadi, Cairo, Egypt | +201027124806 | <a
-                    href="mailto:zeyad.ellkber@gmail.com">zeyad.ellkber@gmail.com</a></p>
-            <p>
-                <a href="https://www.linkedin.com/in/zeyad-alaa/" target="_blank">LinkedIn</a> |
-                <a href="https://github.com/Zeyad222" target="_blank">GitHub</a> |
-                <a href="https://www.behance.net/zeyadalaa" target="_blank">Behance</a>
-            </p>
+            <div class="profile">
+                <img src="profilepic1.jpg" alt="Profile Picture" class="profile-pic">
+                <div class="profile-info">
+                    <h1>Zeyad Alaa Fatouh Mohamed</h1>
+                    <p>New El-Maadi, Cairo, Egypt | +201027124806 | <a
+                            href="mailto:zeyad.ellkber@gmail.com">zeyad.ellkber@gmail.com</a></p>
+                    <p>
+                        <a href="https://www.linkedin.com/in/zeyad-alaa/" target="_blank">LinkedIn</a> |
+                        <a href="https://github.com/Zeyad222" target="_blank">GitHub</a> |
+                        <a href="https://www.behance.net/zeyadalaa" target="_blank">Behance</a>
+                    </p>
+                </div>
+            </div>
         </div>
     </header>
 
@@ -33,6 +38,8 @@
             <li><a href="#skills">Skills</a></li>
             <li><a href="#activities">Extracurricular Activities</a></li>
             <li><a href="#languages">Languages</a></li>
+            <li><a href="#interests">Interests</a></li>
+            <li><a href="#projects">Projects</a></li>
         </ul>
     </nav>
 
@@ -46,15 +53,15 @@
         <section id="education">
             <h2>Education</h2>
             <ul>
-                <li><strong>Cairo University</strong>, Faculty of Computer Science and Artificial Intelligence (2019 -
-                    2023) - Major: Artificial Intelligence</li>
-                <li><strong>Taha Hamam Language School</strong> (2019)</li>
+                <li><strong>Cairo University</strong>, Faculty of Computer Science and Artificial Intelligence <span
+                        class="date">2019 - 2023</span></li>
+                <li><strong>Taha Hamam Language School</strong> <span class="date">2019</span></li>
             </ul>
         </section>
 
         <section id="project">
             <h2>Graduation Project</h2>
-            <p><strong>"Egypt Eye"</strong> (Aug 2022 – July 2023)</p>
+            <p><strong>"Egypt Eye"</strong> <span class="date">Aug 2022 – July 2023</span></p>
             <ul>
                 <li>Developed an application providing comprehensive information on Egyptian landmarks, facilitating
                     personalized city tours with a focus on simplicity and accessibility.</li>
@@ -68,17 +75,35 @@
         <section id="experience">
             <h2>Experience</h2>
             <ul>
-                <li><strong>Freelancer Designer</strong> (2021 – Current)</li>
-                <li><strong>Data Analyst at Nine Psychology</strong> (Dec 2022 – May 2023)</li>
-                <li><strong>Motion Graphic Designer at Mood Company</strong> (2020 – 2021)</li>
-                <li><strong>Junior Designer at Acheiva Academy</strong> (2019 – 2021)</li>
+                <li><strong>Freelancer Designer</strong> <span class="date">2021 – Current</span></li>
+                <ul>
+                    <li>Creating engaging social media designs and motion graphics for advertising on various platforms.
+                    </li>
+                    <li>Contributed to small embedded systems projects by designing graphical interfaces and animations.
+                    </li>
+                </ul>
+                <li><strong>Data Analyst at Nine Psychology</strong> <span class="date">Dec 2022 – May 2023</span></li>
+                <ul>
+                    <li>Collaborated closely with a supervisor to analyze and visualize client data.</li>
+                    <li>Utilized tools such as Excel, Trello, and Setmore for data management and analysis.</li>
+                    <li>Delivered actionable insights based on data analysis and created engaging reports for
+                        stakeholders.</li>
+                </ul>
+                <li><strong>Motion Graphic Designer | Mood company</strong> <span class="date">2020 – 2021</span></li>
+                <li><strong>Junior Designer | Acheiva Academy</strong> <span class="date">2019 – 2021</span></li>
             </ul>
         </section>
 
         <section id="internship">
             <h2>Internship</h2>
             <ul>
-                <li><strong>Data Analyst at Technocolabs Software Company</strong> (Remote) (Sep 2022 – Nov 2022)</li>
+                <li><strong>Data Analyst</strong> at Technocolabs Software Company (Remote) <span class="date">Sep 2022
+                        – Nov 2022</span></li>
+                <ul>
+                    <li>Gained hands-on experience in statistical analysis and data visualization using various tools.
+                    </li>
+                    <li>Refined communication and time management skills through remote work.</li>
+                </ul>
             </ul>
         </section>
 
@@ -96,8 +121,18 @@
         <section id="activities">
             <h2>Extracurricular Activities</h2>
             <ul>
-                <li>Volunteering in Karma El khair Association (2024 – Current)</li>
-                <li>Microsoft Camp (2014)</li>
+                <li><strong>Volunteering in Karma El khair Association</strong> <span class="date">2024 – Current</span>
+                </li>
+                <ul>
+                    <li>During my military service, I worked as a Graphic/Motion Designer and engaged in charity
+                        activities.</li>
+                </ul>
+                <li><strong>Microsoft Camp</strong> <span class="date">2014</span></li>
+                <ul>
+                    <li>This camp was organized in collaboration with the Ministry of Education.</li>
+                    <li>Learned the Microsoft Office suite.</li>
+                    <li>Acquired soft skills such as communication, teamwork, and problem-solving.</li>
+                </ul>
             </ul>
         </section>
 
@@ -105,13 +140,38 @@
             <h2>Languages</h2>
             <ul>
                 <li>Arabic (Mother Tongue), English (B1), German (A2)</li>
+                <li>English (B1)</li>
+                <li>German (A2)</li>
+            </ul>
+        </section>
+
+        <section id="interests">
+            <h2>Interests</h2>
+            <ul class="interests-list">
+                <li>Padel Sport</li>
+                <li>Snorkeling</li>
+                <li>Travel</li>
+                <li>Cycling</li>
+                <li>CrossFit</li>
+            </ul>
+        </section>
+
+        <section id="projects">
+            <h2>Projects</h2>
+            <li><strong>Guru99 Banking System (Manual Testing)</strong> <span class="date">1st May 2024 – 13th May
+                    2024</span></li>
+            <ul>
+                <li>Reviewed Software Requirements Specification (SRS) to ensure comprehensive understanding of
+                    requirements.</li>
+                <li>Created detailed test cases for thorough validation of system functionalities.</li>
+                <li>Documented defects with detailed descriptions, reproduction steps, and severity levels.</li>
             </ul>
         </section>
     </main>
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Zeyad Alaa Fatouh Mohamed. All rights reserved.</p>
+            <p>“References available Upon request.”</p>
         </div>
     </footer>
 </body>
