add download-cv button, enhance styles

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
                         <a href="https://www.behance.net/zeyadalaa" target="_blank">Behance</a>
                     </p>
                 </div>
+                <div class="profile-button">
+                    <a href="Zeyad Alaa Fatouh Mohamed.pdf" class="download-button" download>Download CV</a>
+                </div>
             </div>
         </div>
     </header>
@@ -172,6 +175,7 @@
     <footer>
         <div class="container">
             <p>“References available Upon request.”</p>
+            <a href="Zeyad Alaa Fatouh Mohamed.pdf" class="download-button" download>Download CV</a>
         </div>
     </footer>
 </body>
