add courses point, and update cv

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Zeyad Alaa Fatouh Mohamed - CV</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="profilepic1.jpg">
 </head>
 
 <body>
@@ -16,12 +17,15 @@
                 <img src="profilepic1.jpg" alt="Profile Picture" class="profile-pic">
                 <div class="profile-info">
                     <h1>Zeyad Alaa Fatouh Mohamed</h1>
-                    <p>New El-Maadi, Cairo, Egypt | +201027124806 | <a
-                            href="mailto:zeyad.ellkber@gmail.com">zeyad.ellkber@gmail.com</a></p>
+                    <p>New El-Maadi, Cairo, Egypt |<a href="https://wa.me/201027124806" target="_blank">
+                            +201027124806</a> |
+                        <a href="mailto:zeyad.ellkber@gmail.com">zeyad.ellkber@gmail.com</a>
+                    </p>
                     <p>
                         <a href="https://www.linkedin.com/in/zeyad-alaa/" target="_blank">LinkedIn</a> |
                         <a href="https://github.com/Zeyad222" target="_blank">GitHub</a> |
-                        <a href="https://www.behance.net/zeyadalaa" target="_blank">Behance</a>
+                        <a href="https://www.behance.net/zeyadalaa" target="_blank">Behance</a> |
+                        <a href="https://www.credly.com/users/zeyad-alaa" target="_blank">credly</a>
                     </p>
                 </div>
                 <div class="profile-button">
@@ -38,6 +42,7 @@
             <li><a href="#project">Graduation Project</a></li>
             <li><a href="#experience">Experience</a></li>
             <li><a href="#internship">Internship</a></li>
+            <li><a href="#Courses">Courses</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#activities">Extracurricular Activities</a></li>
             <li><a href="#languages">Languages</a></li>
@@ -110,6 +115,17 @@
             </ul>
         </section>
 
+        <section id="Courses">
+            <h2>Courses</h2>
+            <ul>
+                <li>Test Automation – <span class="course">( Selenium – java )</span> <span class="date">Sep 2024</span>
+                </li>
+                <li>ISTQB – <span class="course">Mahara Tech ITI </span><span class="date">Apr 2024</span></li>
+                <li>Data Science – <span class="course">IBM </span><span class="date">Nov 2022</span></li>
+                <li>Data Analysis – <span class="course">Udacity </span><span class="date">Apr 2022</span></li>
+            </ul>
+        </section>
+
         <section id="skills">
             <h2>Skills</h2>
             <ul>
@@ -161,6 +177,26 @@
 
         <section id="projects">
             <h2>Projects</h2>
+            <li><strong>Automation Testing Selenium-java</strong> <span class="date">6thJune 2024—15thSep 2024</span>
+            </li>
+            <ul>
+                <li>Automation Testing Framework: Developed a robust test automation framework using Selenium WebDriver
+                    with
+                    Java, integrated with TestNG for test execution and Extent Reports for detailed test reporting.
+                </li>
+                <li>Modular Design with Page Object Model: Implemented the Page Object Model (POM) and PageFactory
+                    design
+                    patterns, enhancing code reusability and maintainability, allowing flexible test configuration via
+                    Maven profiles.</li>
+                <li>Cross-Browser Testing: Configured and executed tests on multiple browsers such as Chrome, Edge, and
+                    Firefox,
+                    ensuring broad test coverage across different environments using Maven commands. </li>
+                <li>Continuous Integration and Reporting: Set up automated test execution with Maven and generated
+                    detailed
+                    ExtentReports and Cucumber reports, ensuring thorough tracking of test results and smooth
+                    integration with CI/CD
+                    pipelines.</li>
+            </ul>
             <li><strong>Guru99 Banking System (Manual Testing)</strong> <span class="date">1st May 2024 – 13th May
                     2024</span></li>
             <ul>
@@ -171,6 +207,8 @@
             </ul>
         </section>
     </main>
+
+
 
     <footer>
         <div class="container">
