--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <ul>
                 <li>Software Testing Fundamentals ISTQB</li>
                 <li>OOP, Algorithms, Data Structure</li>
-                <li>Python, SQL, HTML, CSS, Java, C++, C#, .NET</li>
+                <li>Java, Python, SQL, HTML, CSS, JS</li>
                 <li>Data Analysis</li>
                 <li>RDBMS Management: MySQL, SQL Server</li>
             </ul>
